force-app/main/default/objects/Job_Posting_Document__c/Job_Posting_Document__c.object-meta.xml
<CustomObject>
    <label>Job Posting Document</label>
    <nameField>
        <label>Job Posting Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Posting Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>