force-app/main/default/objects/Job_Posting_Document__c/fields/Azure_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Azure_Document_URL__c</fullName>
    <label>Azure Document URL</label>
    <type>Url</type>
</CustomField>