force-app/main/default/objects/Job_Posting_Document__c/fields/Azure_FileID__c.field-meta.xml
<CustomField>
    <fullName>Azure_FileID__c</fullName>
    <label>Azure FileID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>