force-app/main/default/objects/Job_Posting_Document__c/fields/Azure_View_URL__c.field-meta.xml
<CustomField>
    <fullName>Azure_View_URL__c</fullName>
    <label>Azure View URL</label>
    <type>Url</type>
</CustomField>