force-app/main/default/objects/Job_Posting_Document__c/fields/Document_Master__c.field-meta.xml
<CustomField>
    <fullName>Document_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Document Master</label>
    <referenceTo>Document_Master__c</referenceTo>
    <relationshipLabel>Job Posting Documents</relationshipLabel>
    <relationshipName>Job_Posting_Documents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>