force-app/main/default/objects/Job_Posting_Document__c/fields/GDrive_Doc_URL__c.field-meta.xml
<CustomField>
    <fullName>GDrive_Doc_URL__c</fullName>
    <label>GDrive Document URL</label>
    <type>Url</type>
</CustomField>