force-app/main/default/objects/Job_Posting_Document__c/fields/GDrive_FileID__c.field-meta.xml
<CustomField>
    <fullName>GDrive_FileID__c</fullName>
    <label>GDrive FileID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>