force-app/main/default/objects/Job_Posting_Document__c/fields/GDrive_View_URL__c.field-meta.xml
<CustomField>
    <fullName>GDrive_View_URL__c</fullName>
    <label>GDrive View URL</label>
    <type>Url</type>
</CustomField>