force-app/main/default/objects/Job_Posting_Document__c/fields/Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Posting</label>
    <referenceTo>Job_Posting__c</referenceTo>
    <relationshipLabel>Job Posting Documents</relationshipLabel>
    <relationshipName>Job_Posting_Documents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>